--- a/tests/examples/02.out.md
+++ b/tests/examples/02.out.md
@@ -1,3 +1,3 @@
-;; This is the second comment
+// This is the second comment
 
 Comarkdown should ignore the first comment, but keep the second comment.
