--- a/tests/examples/04.out.md
+++ b/tests/examples/04.out.md
@@ -1,10 +1,7 @@
-
-
 // Comments will be left literally if they are in an ignore block
 
 If you for some reason want to use the literal string `\unignore`, you can use
 the `\ignoretill` macro.
-
 
 # Example 4
 
@@ -15,8 +12,7 @@ dictum, lectus libero pretium risus, eget rutrum ligula urna vel
 nulla. Nullam auctor pretium arcu nec feugiat. Nullam volutpat, velit
 nec mattis mattis, elit dui blandit nisi, at sollicitudin sem arcu id
 lorem. Donec metus tellus, lobortis ac eleifend a, tristique non
-justo. Nam pharetra ipsum ut volutpat rutrum.\
- Vestibulum tincidunt
+justo. Nam pharetra ipsum ut volutpat rutrum.\n Vestibulum tincidunt
 pulvinar magna tristique malesuada. Duis quis dictum ex. Mauris tempus
 consectetur mi non placerat. Donec nec mauris pulvinar, maximus ipsum
 sit amet, tempus lectus. Nam non euismod sapien. Nulla a iaculis justo,
@@ -26,8 +22,7 @@ eros, placerat vitae mollis eu, pretium vel nibh. Integer ac vulputate
 justo, a feugiat sapien. Aenean sed velit et neque eleifend lobortis id
 dapibus urna. Donec rutrum aliquet laoreet. Aenean lobortis turpis non
 lectus venenatis fringilla. Sed semper faucibus mauris, vitae vulputate
-diam sagittis id.\
- Donec mattis purus purus, quis interdum nisi ornare
+diam sagittis id.\n Donec mattis purus purus, quis interdum nisi ornare
 id. Vestibulum at auctor odio. Integer suscipit mollis
 finibus. Vestibulum ante ipsum primis in faucibus orci luctus et
 ultrices posuere cubilia Curae; Aliquam imperdiet magna dui, id
@@ -35,9 +30,7 @@ ultricies ipsum faucibus ut. Aliquam elementum, orci porttitor malesuada
 elementum, metus dolor ullamcorper metus, at placerat nisi purus nec
 dolor. Nullam sit amet consectetur neque. Etiam ac orci id elit placerat
 gravida. In arcu tellus, suscipit id euismod vel, viverra quis
-nibh. Suspendisse consectetur rutrum convallis.\
-\
- Phasellus facilisis
+nibh. Suspendisse consectetur rutrum convallis.\n\n Phasellus facilisis
 finibus molestie. Aliquam eleifend nibh a nunc mattis vestibulum. Nullam
 faucibus elit quis lectus bibendum, vel euismod lectus
 efficitur. Curabitur justo justo, fringilla ut ligula nec, aliquet
